--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,7 +18,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r 评论区引流器/-2/requirements.txt
-      - name: Lint & Test
+      - name: Lint
         run: |
           flake8 || echo "lint warnings"
-          pytest -q || echo "tests optional"
+      - name: Test with coverage
+        run: |
+          pytest --cov=. --cov-report=xml -q || echo "tests optional"
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./coverage.xml
+          fail_ci_if_error: false
