--- a/评论区引流器/-2/requirements.txt
+++ b/评论区引流器/-2/requirements.txt
@@ -40,11 +40,7 @@ tqdm>=4.66.0
 # 开发和测试
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
 black>=23.7.0
 flake8>=6.0.0
 isort>=5.12.0
-
-# 可选依赖（高级功能）
-# tensorflow>=2.13.0  # 用于高级AI功能
-# torch>=2.0.0       # 用于深度学习模型
-# transformers>=4.30.0  # 用于NLP功能
