--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -17,13 +17,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r 评论区引流器/-2/requirements.txt
+          pip install pytest pytest-cov flake8
       - name: Lint
         run: |
           flake8 || echo "lint warnings"
       - name: Test with coverage
         run: |
-          pytest --cov=. --cov-report=xml -q || echo "tests optional"
+          pytest -q 评论区引流器/-2/tests --cov=评论区引流器/-2 --cov-report=xml || echo "tests optional"
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
